feat(oauth2): apply state recommend to prevent attack CSRF

--- a/.env.local
+++ b/.env.local
@@ -128,6 +128,11 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL=http://localhost:3333/api/v1/auth/google-redirect
 GOOGLE_SCOPE=email,profile
 
+GITHUB_CLIENT_ID=a143a54fd2b5f9d87933
+GITHUB_CLIENT_SECRET=90a6b0e42c927e152503f39719sw3893cf2b342f
+GITHUB_CALLBACK_URL=http://localhost:3333/api/v1/auth/github-redirect
+GITHUB_SCOPE=user
+
 
 SWAGGER_ENABLE=true
 SWAGGER_NAME=admin
