--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "pino-pretty": "^10.2.0",
     "prisma-pagination": "^0.2.3",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
     "ua-parser-js": "^1.0.36"
   },
@@ -92,6 +93,7 @@
     "@types/passport-github2": "^1.2.6",
     "@types/passport-google-oauth20": "^2.0.12",
     "@types/passport-jwt": "^3.0.10",
+    "@types/request-ip": "^0.0.39",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
